<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuestionFragment">

    <TextView
        android:id="@+id/page_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/headerText"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        style="@style/questions"/>

    <Button
        android:id="@+id/q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/questions"
        android:text="@string/q2" />

    <Button
        android:id="@+id/q3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/questions"
        android:text="@string/q3" />

</LinearLayout>